unpackaged/config/ready/29_Program_Offering_Capacity_RollUp/29_Program_Offering_Capacity_RollUp/objects/redu_Program_Offering_Capacity__c.object
<CustomObject>
    <description>Object to define and track the seat capacity based on different categories.</description>
    <fields>
        <fullName>redu_Available_Places__c</fullName>
        <formula>redu_Capacity__c - redu_Booked_Places__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redu_Booked_Places__c</fullName>
        <label>Booked Places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redu_Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redu_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indigenous</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Special Admissions</fullName>
                </value>
                <value>
                    <fullName>BAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redu_Program_Offering__c</fullName>
        <label>Program Offering</label>
        <referenceTo>rio_ed__Program_Offering__c</referenceTo>
        <relationshipLabel>Program Offering Capacities</relationshipLabel>
        <relationshipName>Program_Offering_Capacities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>redu_Seat_Category__c</fullName>
        <formula>TEXT( redu_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to display category in the lookup search.</inlineHelpText>
        <label>Seat Category</label>
        <type>Text</type>
    </fields>
    <label>Program Offering Capacity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>POC-{000000}</displayFormat>
        <label>Program Offering Capacity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Offering Capacities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>